contrast issue

--- a/tool/css/style1.css
+++ b/tool/css/style1.css
@@ -518,7 +518,7 @@ span.sb input[type="submit"] {
 }
 
 .single-header-a span a, .single-header-u span a {
-    color:#FFFFFF;
+    color: #f7f6f6;
 }
 
 
